--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest --forceExit --verbose",
     "build": "rm -rf lib && tsc",
     "watch": "tsc -w",
-    "prepublish": "npm run build",
+    "prepare": "npm run build",
     "precommit": "lint-staged"
   },
   "repository": {
