--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "zcool ui libary",
   "main": "lib/index.js",
   "scripts": {
+    "start": "cd site && node server.js",
     "lint": "npm-run-all lint:stylelint lint:tslint",
     "lint:stylelint": "stylelint '**/*.tsx'",
     "lint:tslint": "tslint -p . -t verbose",
@@ -18,7 +19,11 @@
     "type": "git",
     "url": "git@git.hellorf.work:cuining/zcool-component.git"
   },
-  "keywords": ["react", "component", "styled-components"],
+  "keywords": [
+    "react",
+    "component",
+    "styled-components"
+  ],
   "author": "cuining",
   "license": "ISC",
   "dependencies": {
@@ -30,6 +35,9 @@
   "devDependencies": {
     "@types/jest": "^22.2.2",
     "@types/react": "^16.3.5",
+    "awesome-typescript-loader": "^5.0.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
@@ -37,13 +45,16 @@
     "jest-styled-components": "^5.0.1",
     "lint-staged": "^4.0.3",
     "npm-run-all": "^4.1.2",
+    "react-hot-loader": "^4.0.1",
     "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^22.4.2",
+    "tslint-config-zcool": "^1.0.0",
     "typescript": "^2.8.1",
-    "tslint-config-zcool": "^1.0.0"
+    "webpack": "^4.5.0",
+    "webpack-dev-server": "^3.1.3"
   },
   "peerDependencies": {
     "react": "^16.3.1",
