--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "outDir": "lib",
     "baseUrl": ".",
     "typeRoots": ["./node_modules/@types"],
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "es2017", "dom"]
   },
   "include": ["src/**/*"]
 }
