文档增加路由 (#9)
* update: site

* update: 文档页面搭建

* update: route

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "type": "git",
     "url": "git@git.hellorf.work:cuining/zcool-component.git"
   },
-  "keywords": ["react", "component", "styled-components"],
+  "keywords": [
+    "react",
+    "component",
+    "styled-components"
+  ],
   "author": "cuining",
   "license": "ISC",
   "dependencies": {
