--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^22.4.2",
-    "tslint-config-zcool": "^1.3.0",
+    "tslint-config-zcool": "^1.5.0",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
     "webpack-dev-server": "^3.1.3"
@@ -61,6 +61,9 @@
     "react-dom": "^16.3.1"
   },
   "lint-staged": {
-    "*.tsx": ["tslint --fix", "git add"]
+    "*.tsx": [
+      "tslint --fix",
+      "git add"
+    ]
   }
 }
