--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cd site && node server.js",
     "lint": "npm-run-all lint:stylelint lint:tslint",
-    "lint:stylelint": "stylelint '**/*.tsx'",
+    "lint:stylelint": "stylelint '**/*.ts'",
     "lint:tslint": "tslint -p . -t verbose",
     "pretest": "npm run lint",
     "test": "jest --forceExit --verbose",
@@ -25,8 +25,7 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "styled-components": "^3.2.5",
-    "tslint": "^5.9.1"
+    "styled-components": "^3.2.5"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
@@ -47,7 +46,8 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.3.1",
     "ts-jest": "^22.4.2",
-    "tslint-config-zcool": "latest",
+    "tslint": "^5.9.1",
+    "tslint-config-zcool": "^1.6.0",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
     "webpack-dev-server": "^3.1.3"
@@ -57,6 +57,6 @@
     "react-dom": "^16.3.1"
   },
   "lint-staged": {
-    "*.tsx": ["tslint --fix", "git add"]
+    "*.{ts,tsx}": ["tslint --fix", "git add"]
   }
 }
