--- a/package.json
+++ b/package.json
@@ -19,17 +19,13 @@
     "type": "git",
     "url": "git@git.hellorf.work:cuining/zcool-component.git"
   },
-  "keywords": [
-    "react",
-    "component",
-    "styled-components"
-  ],
+  "keywords": ["react", "component", "styled-components"],
   "author": "cuining",
   "license": "ISC",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "styled-components": "^3.2.5"
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
@@ -44,7 +40,10 @@
     "jest-styled-components": "^5.0.1",
     "lint-staged": "^4.0.3",
     "npm-run-all": "^4.1.2",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-hot-loader": "^4.0.1",
+    "styled-components": "^3.2.6",
     "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
@@ -56,14 +55,7 @@
     "webpack": "^4.5.0",
     "webpack-dev-server": "^3.1.3"
   },
-  "peerDependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
-  },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "tslint --fix",
-      "git add"
-    ]
+    "*.{ts,tsx}": ["tslint --fix", "git add"]
   }
 }
