--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "type": "git",
     "url": "git@git.hellorf.work:cuining/zcool-component.git"
   },
-  "keywords": ["react", "component", "styled-components"],
+  "keywords": [
+    "react",
+    "component",
+    "styled-components"
+  ],
   "author": "cuining",
   "license": "ISC",
   "peerDependencies": {
@@ -56,6 +60,12 @@
     "webpack-dev-server": "^3.1.3"
   },
   "lint-staged": {
-    "*.{ts,tsx}": ["tslint --fix", "git add"]
+    "*.{ts,tsx}": [
+      "tslint --fix",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "react-popper": "^1.0.0-beta.6"
   }
 }
