--- a/package.json
+++ b/package.json
@@ -67,7 +67,6 @@
   },
   "dependencies": {
     "react-popper": "^1.0.0-beta.6",
-    "react-slick": "^0.23.1",
-    "slick-carousel": "^1.8.1"
+    "react-slick": "^0.23.1"
   }
 }
