--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     ]
   },
   "dependencies": {
-    "react-popper": "^1.0.0-beta.6"
+    "react-popper": "^1.0.0-beta.6",
+    "react-slick": "^0.23.1"
   }
 }
