--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "react-modal": "^3.4.4",
     "react-popper": "^1.0.0-beta.6",
+    "react-select": "^2.0.0-beta.6",
     "react-slick": "^0.23.1"
   }
 }
