--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,10 @@
     "removeComments": false,
     "preserveConstEnums": true,
     "skipLibCheck": true,
-    "outDir": "lib",
     "baseUrl": ".",
+    "declaration": true,
+    "declarationDir": "lib",
+    "outDir": "lib",
     "typeRoots": ["./node_modules/@types"],
     "lib": ["es6", "es2017", "dom"]
   },
