--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,17 @@
     "jsx": "react",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "removeComments": false,
     "preserveConstEnums": true,
     "skipLibCheck": true,
-    "outDir": "lib",
     "baseUrl": ".",
+    "declaration": true,
+    "declarationDir": "lib",
+    "outDir": "lib",
     "typeRoots": ["./node_modules/@types"],
     "lib": ["es6", "es2017", "dom"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.tsx"]
 }
