--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "typeRoots": ["./node_modules/@types"],
     "lib": ["es6", "es2017", "dom"]
   },
-  "include": ["src/**/*.tsx"]
+  "include": ["src/**/*"]
 }
