--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-modal": "^3.4.4",
     "react-popper": "^1.0.0",
     "react-select": "^2.0.0-beta.6",
-    "react-slick": "^0.23.1"
+    "react-slick": "^0.23.1",
+    "styled-components": "^3.3.2"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
@@ -48,7 +49,6 @@
     "react-dom": "^16.4.1",
     "react-hot-loader": "^4.3.3",
     "prettier": "1.13.5",
-    "styled-components": "^3.3.2",
     "stylelint": "^9.3.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
