--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "styled-components": "^3.3.2"
   },
   "dependencies": {
-    "react-modal": "^3.4.4",
+    "react-modal": "^3.5.1",
     "react-popper": "^1.0.0",
-    "react-select": "^2.0.0-beta.6",
+    "react-select": "^2.0.0",
     "react-slick": "^0.23.1",
-    "styled-components": "^3.3.2"
+    "styled-components": "^3.4.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
-    "@types/react": "^16.4.0",
+    "@types/react": "^16.4.7",
     "awesome-typescript-loader": "^5.1.1",
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
@@ -45,20 +45,20 @@
     "jest-styled-components": "^5.0.1",
     "lint-staged": "^4.0.3",
     "npm-run-all": "^4.1.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3",
     "prettier": "1.13.5",
-    "stylelint": "^9.3.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-hot-loader": "^4.3.4",
+    "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.3.1",
+    "stylelint-processor-styled-components": "^1.3.2",
     "ts-jest": "^22.4.2",
-    "tslint": "^5.9.1",
+    "tslint": "^5.11.0",
     "tslint-config-zcool": "^1.7.0",
     "typescript": "^2.9.2",
-    "webpack": "^4.12.0",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.16.4",
+    "webpack-dev-server": "^3.1.5"
   },
   "scripts": {
     "start": "cd site && node server.js",
