--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zeus",
-  "version": "0.0.1",
+  "name": "zeus-ui",
+  "version": "0.0.1-canary.3",
   "description": "zcool ui libary",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -69,7 +69,6 @@
     "test": "jest --forceExit --verbose",
     "build": "rm -rf lib && tsc",
     "watch": "tsc -w",
-    "preinstall": "npm install --ignore-scripts && npm run build",
     "precommit": "lint-staged"
   },
   "lint-staged": {
