--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeus-ui",
-  "version": "0.0.1-canary.4",
+  "version": "0.0.1-canary.5",
   "description": "zcool ui libary",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -38,10 +38,12 @@
     "awesome-typescript-loader": "^5.1.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.5",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "husky": "^0.14.3",
     "jest": "^23.4.2",
+    "jest-enzyme": "^6.0.4",
     "jest-styled-components": "^6.0.0",
     "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.2",
@@ -66,7 +68,7 @@
     "lint:stylelint": "stylelint '**/*.tsx'",
     "lint:tslint": "tslint -p . -t verbose",
     "pretest": "npm run lint",
-    "test": "jest --forceExit --verbose",
+    "test": "jest --detectOpenHandles --verbose",
     "build": "rm -rf lib && tsc",
     "watch": "tsc -w",
     "precommit": "lint-staged"
