--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "styled-components": "^4.0.2"
   },
   "dependencies": {
+    "rc-cascader": "^0.16.2",
     "react-modal": "^3.5.1",
     "react-popper": "^1.0.0",
     "react-select": "^2.0.0",
@@ -37,7 +38,9 @@
     "@types/react": "^16.4.0",
     "awesome-typescript-loader": "^5.1.1",
     "babel-core": "^6.26.0",
+    "babel-inline-import-loader": "^0.1.0",
     "babel-loader": "^7.1.5",
+    "babel-plugin-inline-import": "^3.0.0",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
