--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeus-ui",
-  "version": "1.0.0-canary.24",
+  "version": "1.1.0-alpha.0",
   "description": "zcool ui libary",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -23,17 +23,17 @@
   "peerDependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "styled-components": "^4.0.2"
+    "styled-components": "^5.2.0"
   },
   "dependencies": {
     "react-modal": "^3.5.1",
     "react-popper": "^1.0.0",
     "react-select": "^2.0.0",
-    "react-slick": "^0.23.1",
-    "styled-components": "^4.0.2"
+    "react-slick": "^0.26"
   },
   "devDependencies": {
     "@types/jest": "^23.3.7",
+    "@types/node": "14.6.2",
     "@types/react": "^16.4.0",
     "awesome-typescript-loader": "^5.1.1",
     "babel-core": "^6.26.0",
@@ -44,13 +44,14 @@
     "husky": "^0.14.3",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.0",
-    "jest-styled-components": "^6.0.0",
+    "jest-styled-components": "^7.0.3",
     "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.2",
     "prettier": "1.14.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.4",
+    "styled-components": "^5.2.0",
     "stylelint": "^9.4.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-styled-components": "^0.1.1",
